# revona-cli

./: .gitignore  README.md  SYSTEM_CAPABILITIES.md  pyproject.toml  requirements.txt  revona_main.py
.github/workflows/: delete-pypi-versions.yml  release.yml
.user/: profile.json
AI/: API Index.md  Architecture.md  Bugs.md  Coding Standards.md  Decisions.md  Lessons.md  Roadmap.md
Accelerators/docker/: .dockerignore  Dockerfile  docker-compose.yml  manifest.json
Accelerators/github-actions/: cd.yml  ci.yml  manifest.json
Blueprints/API Service/: architecture.md  blueprint.json  modules.md  schema.md
Blueprints/CRUD App/: architecture.md  blueprint.json  modules.md  schema.md
Skills/Docker/: best-practices.md  instructions.md  skill.json  verification.md
Skills/React/: best-practices.md  instructions.md  skill.json  verification.md
Skills/Testing/: best-practices.md  instructions.md  skill.json  verification.md
agent/: __init__.py  agent.py  agents.py  autonomy.py  capabilities.py  cli.py  client.py  config.py  context.py  context_ranker.py  governance.py  memory.py  mission.py  mission_engine.py  models.py  plugin_sdk.py  progress.py  prompts.py  recovery.py  repo_db.py  repo_intel.py  semantic_search.py  session.py  skills.py  tools.py  tui.py  verification.py  watcher.py  worker.py
packaging/lib/agent/: memory.py  prompts.py  terminal.py  tui.py
packaging/npm/: build.js  install.js  package.json  uninstall.js
scripts/: delete_pypi_versions.py
