[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "revona"
version = "1.0.0"
description = "Autonomous AI Engineering Platform — built by LX Obsidian Labs"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "click>=8.1",
    "rich>=13.0",
    "requests>=2.31",
]

[project.scripts]
revona = "agent.cli:main"

[tool.setuptools.packages.find]
include = ["agent*"]
